# key-logger-detection-rust

./: .gitignore  Cargo.toml  LICENSE  README.md  report.html
src/: main.rs  monitor.rs  report.rs  scanner.rs  signatures.rs  utils.rs
src/detectors/: behavior.rs  hooks.rs  mod.rs  network.rs  process.rs
